--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,6 +4,6 @@
 
 .index-image {
   width: 100%; /* 원하는 크기로 변경 */
-  max-width: 100%; /* 최대 크기 설정 */
+  max-width: 1300px; /* 최대 크기 설정 */
   height: auto; /* 비율을 유지하며 크기를 조정 */
 }
