--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -8,11 +8,13 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* 반투명 배경 */
+    background-color: rgba(0, 0, 0, 0.5);
+    /* 반투명 배경 */
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000; /* 최상위에 위치 */
+    z-index: 1000;
+    /* 최상위에 위치 */
 }
 
 .modalContent {
@@ -24,14 +26,16 @@
 
 .modal {
     background-color: #fff;
-    width: 400px; /* 모달 너비를 늘림 */
+    width: 400px;
+    /* 모달 너비를 늘림 */
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 .modalOpen {
-    overflow: hidden; /* 모달이 열려 있는 동안 배경 스크롤 방지 */
+    overflow: hidden;
+    /* 모달이 열려 있는 동안 배경 스크롤 방지 */
 }
 
 .modal h2 {
@@ -40,7 +44,8 @@
 
 .modal input,
 .modal textarea {
-    width: 100%; /* 입력 필드와 텍스트 영역을 모달 너비에 맞춤 */
+    width: 100%;
+    /* 입력 필드와 텍스트 영역을 모달 너비에 맞춤 */
     padding: 10px;
     border: 1px solid #C4C4C4;
     align-items: center;
@@ -51,12 +56,14 @@
 }
 
 .modal textarea {
-    height: 150px; /* 텍스트 영역의 높이를 늘림 */
-    resize: none; /* 사용자가 크기를 조정할 수 있도록 함 */
+    height: 150px;
+    /* 텍스트 영역의 높이를 늘림 */
+    resize: none;
+    /* 사용자가 크기를 조정할 수 있도록 함 */
 }
 
 .modalButtons {
-    text-align: right;
+    text-align: center;
 }
 
 .modalButtons button {
@@ -64,17 +71,28 @@
     padding: 8px 16px;
     cursor: pointer;
     border: none;
-    background-color: #864e5d;
-    color: #fff;
     border-radius: 5px;
 }
 
-.modalButtons button:hover {
+.modalButtons .saveButton {
+    background-color: #864e5d;
+    color: white;
+}
+
+.modalButtons .saveButton button:hover {
     background-color: #673d48;
 }
 
+.modalButtons .cancelButton {
+    background-color: transparent;
+    border: 1px solid #C4C4C4;
+    border-radius: 5px;
+    margin-left: 10px;
+}
+
 .selectCategory {
-    width: 100%; /* 선택 필드 너비를 100%로 설정 */
+    width: 100%;
+    /* 선택 필드 너비를 100%로 설정 */
     border: 1px solid #C4C4C4;
     align-items: center;
     box-sizing: border-box;
