[#18]✨feat : 신고하기 모달 화면 구성

--- a/src/styles/PostDetail.module.css
+++ b/src/styles/PostDetail.module.css
@@ -58,11 +58,11 @@
 .icons {
     display: flex;
     gap: 8px;
-    /* optional: adds space between icons */
 }
 
 .editIcon,
-.deleteIcon {
+.deleteIcon,
+.reportIcon {
     cursor: pointer;
     font-size: 18px;
     color: #888;
