--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -41,12 +41,12 @@
 }
 
 .navLink:hover {
-  color: #0070f3;
+  color: #874355;
 }
 
 .active {
   color: #4a2b35;
-  border-bottom: 2px solid #0070f3;
+  border-bottom: 2px solid #4a2b35;
 }
 
 .headerButtons {
