[#28] ✨feat : 유저 권한, 역할 변경할수 있는 부분 시각화 하기위해 마우스 포인터, 밑줄 css 추가

--- a/src/styles/UserList.module.css
+++ b/src/styles/UserList.module.css
@@ -99,3 +99,10 @@
 .table td:nth-child(5) {
     width: 15%;
 }
+
+.userEdit {
+    cursor: pointer;
+    text-decoration-line: underline;
+    text-underline-offset: 5px; /* 밑줄 간격 조정 */
+    text-decoration-color: #864e5d;
+}
