--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -17,13 +17,6 @@
     /* 최상위에 위치 */
 }
 
-.modalContent {
-    background-color: white;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
-
 .modal {
     background-color: #fff;
     width: 400px;
@@ -48,9 +41,7 @@
     /* 입력 필드와 텍스트 영역을 모달 너비에 맞춤 */
     padding: 10px;
     border: 1px solid #C4C4C4;
-    align-items: center;
     box-sizing: border-box;
-    align-items: center;
     border-radius: 10px;
     font-size: 14px;
 }
@@ -60,6 +51,10 @@
     /* 텍스트 영역의 높이를 늘림 */
     resize: none;
     /* 사용자가 크기를 조정할 수 있도록 함 */
+}
+
+.inputGroup {
+    margin-top: 15px;
 }
 
 .modalButtons {
@@ -80,7 +75,7 @@
     color: white;
 }
 
-.modalButtons .saveButton button:hover {
+.modalButtons .saveButton:hover {
     background-color: #673d48;
 }
 
@@ -91,20 +86,9 @@
     margin-left: 10px;
 }
 
-.selectCategory {
-    width: 100%;
-    /* 선택 필드 너비를 100%로 설정 */
-    border: 1px solid #C4C4C4;
-    align-items: center;
-    box-sizing: border-box;
-    border-radius: 10px;
-    padding: 10px 10px;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 16px;
-}
-
-.inputGroup {
-    margin-top: 15px;
+.error {
+    color: #d9534f; /* 빨간색 */
+    font-size: 15px; /* 1포인트 키운 폰트 크기 */
+    font-weight: bold;
+    margin-top: 10px;
 }
