--- a/src/styles/Profile.module.css
+++ b/src/styles/Profile.module.css
@@ -1,3 +1,4 @@
+/* src/styles/Profile.module.css */
 .profilePage {
     padding: 20px;
     max-width: 1200px;
@@ -18,6 +19,7 @@
 
 .leftContainer {
     flex: 1;
+    margin-top: 100px; /* 위쪽 마진 추가 */
     display: flex;
     flex-direction: column; /* 세로 방향으로 배치 */
     gap: 20px; /* 상하 간격 설정 */
@@ -25,6 +27,7 @@
 
 .rightContainer {
     flex: 1;
+    margin-top: 30px;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -76,7 +79,7 @@
 
 .rightContainer > div {
     flex: 1;
-    background-color: #f8f9fa;
+    background-color: #ffffff;
     border-radius: 8px;
     border: 1px solid #ddd;
     padding: 15px;
@@ -94,9 +97,30 @@
     border-collapse: collapse;
 }
 
-.table td {
+.table th, .table td {
     padding: 12px 15px;
     text-align: left;
+}
+
+.table th {
+    background-color: white;
+    font-weight: bold;
+    text-transform: uppercase;
+    border-bottom: 2px solid #ddd; /* 헤더와 본문 사이의 두꺼운 하단 경계선 */
+}
+
+.table td {
+    background-color: #fff;
+    border-bottom: 1px solid #ddd; /* 각 행의 하단 경계선 */
+}
+
+/* 세로선을 숨기기 위한 스타일 */
+.table td {
+    border-right: none; /* 오른쪽 경계선 숨김 */
+}
+
+.table tr:last-child td {
+    border-bottom: none; /* 마지막 행의 하단 경계선 제거 */
 }
 
 .table tr:nth-child(even) {
@@ -108,16 +132,30 @@
 }
 
 .clickableRow {
-    cursor: pointer;
+    cursor: pointer; /* 마우스 커서를 링크 클릭할 때처럼 바꾸기 위한 스타일 */
 }
 
-.table td {
-    border: none;
+/* 카테고리 */
+.table th:nth-child(1),
+.table td:nth-child(1) {
+    width: 20%; /* 원하는 너비로 조정 */
+}
+
+/* 제목 */
+.table th:nth-child(2),
+.table td:nth-child(2) {
+    width: 60%; /* 원하는 너비로 조정 */
+}
+
+/* 좋아요 수 */
+.table th:nth-child(3),
+.table td:nth-child(3) {
+    width: 20%; 
 }
 
 .postLink {
     text-decoration: none;
-    color: #007bff;
+    color: inherit; 
 }
 
 .postLink:hover {
@@ -128,5 +166,22 @@
     display: block;
     margin-top: 10px;
     font-weight: bold;
-    color: #007bff;
+    color: #6c757d; /* 회색 텍스트 */
+    text-decoration: underline; /* 밑줄 추가 */
+    text-align: center; /* 중앙 정렬 */
+}
+
+.viewMore:hover {
+    color: #495057; /* 호버 시 더 어두운 회색 */
+}
+.withdrawContainer {
+    margin-top: 10px; /* 상자와의 간격 조정 */
+}
+
+.withdrawText {
+    color: #6c757d;
+    text-decoration: underline;
+    cursor: pointer;
+    display: block; 
+    text-align: center; 
 }
