--- a/src/styles/Profile.module.css
+++ b/src/styles/Profile.module.css
@@ -8,7 +8,8 @@
 .pageTitle {
     font-size: 2em;
     font-weight: bold;
-    margin-bottom: 20px;
+    margin-top: 40px;
+    margin-bottom: 60px;
     text-align: center; /* 중앙 정렬 */
 }
 
@@ -77,7 +78,7 @@
     box-shadow: 0 0 0 2px #3e232c;
 }
 
-.rightContainer > div {
+.rightContainer>div {
     flex: 1;
     background-color: #ffffff;
     border-radius: 8px;
@@ -131,10 +132,6 @@
     background-color: #f1f1f1;
 }
 
-.clickableRow {
-    cursor: pointer; /* 마우스 커서를 링크 클릭할 때처럼 바꾸기 위한 스타일 */
-}
-
 /* 카테고리 */
 .table th:nth-child(1),
 .table td:nth-child(1) {
@@ -144,18 +141,25 @@
 /* 제목 */
 .table th:nth-child(2),
 .table td:nth-child(2) {
-    width: 60%; /* 원하는 너비로 조정 */
+    width: 40%; /* 원하는 너비로 조정 */
+}
+
+/* 작성 일자 */
+.table th:nth-child(3),
+.table td:nth-child(3) {
+    width: 22%; /* 원하는 너비로 조정 */
 }
 
 /* 좋아요 수 */
-.table th:nth-child(3),
-.table td:nth-child(3) {
-    width: 20%; 
+.table th:nth-child(4),
+.table td:nth-child(5) {
+    width: 18%;
 }
 
 .postLink {
     text-decoration: none;
-    color: inherit; 
+    color: inherit;
+    cursor: pointer;
 }
 
 .postLink:hover {
@@ -172,16 +176,21 @@
 }
 
 .viewMore:hover {
-    color: #495057; /* 호버 시 더 어두운 회색 */
+    color: black; /* 호버 시 검정색 */
 }
+
 .withdrawContainer {
-    margin-top: 10px; /* 상자와의 간격 조정 */
+    margin-top: 5px; /* 상자와의 간격 조정 */
 }
 
 .withdrawText {
     color: #6c757d;
     text-decoration: underline;
     cursor: pointer;
-    display: block; 
-    text-align: center; 
+    display: block;
+    text-align: center;
+}
+
+.withdrawText:hover {
+    color: black; /* 호버 시 검정색 */
 }
