--- a/src/styles/PostList.module.css
+++ b/src/styles/PostList.module.css
@@ -16,7 +16,8 @@
     border-collapse: collapse; /* 셀 사이의 경계선 병합 */
 }
 
-.table th, .table td {
+.table th,
+.table td {
     padding: 12px 15px;
     text-align: left;
 }
@@ -87,15 +88,22 @@
     display: flex;
     align-items: center;
     justify-content: center;
-     margin-left: auto; 
-  }
-  
-  .button:hover {
+    margin-left: auto;
+}
+
+.button:hover {
     background-color: #4a2b35;
-  }
-  
-  .button:focus {
+}
+
+.button:focus {
     outline: none;
     box-shadow: 0 0 0 2px #3e232c;
-  }
-  
+}
+
+.option {
+        display: flex;
+        align-items: center;
+        background-color: #fff;
+        padding: 5px;
+        border-radius: 5px;
+}
