--- a/src/styles/PostList.module.css
+++ b/src/styles/PostList.module.css
@@ -107,3 +107,10 @@
         padding: 5px;
         border-radius: 5px;
 }
+
+.adminPost{
+    cursor: pointer;
+    text-decoration-line: underline;
+    text-underline-offset: 5px; /* 밑줄 간격 조정 */
+    text-decoration-color: #864e5d;
+}
