[#132]♻️refactor : reportList post작성자의 userId 추가

--- a/src/styles/ReportList.module.css
+++ b/src/styles/ReportList.module.css
@@ -39,27 +39,33 @@
 .table tr:hover {
     background-color: #f1f1f1;
 }
-/* 신고사유 */
+
 .table th:nth-child(1),
 .table td:nth-child(1) {
-    width: 50%; /* 원하는 너비로 조정 */
+    width: 40%; /* 원하는 너비로 조정 */
+}
+
+/* 신고사유 */
+.table th:nth-child(2),
+.table td:nth-child(2) {
+    width: 15%; /* 원하는 너비로 조정 */
 }
 
 /* 신고당한 유저*/
-.table th:nth-child(2),
-.table td:nth-child(2) {
-    width: 20%; /* 원하는 너비로 조정 */
+.table th:nth-child(3),
+.table td:nth-child(3) {
+    width: 15%; /* 원하는 너비로 조정 */
 }
 
 /* 신고상태 */
-.table th:nth-child(3),
-.table td:nth-child(3){
-    width: 10%;
+.table th:nth-child(4),
+.table td:nth-child(4){
+    width: 15%;
 }
 
 /* 신고일자*/
-.table th:nth-child(4),
-.table td:nth-child(4) {
+.table th:nth-child(5),
+.table td:nth-child(5) {
     width: 20%; /* 원하는 너비로 조정 */
 }
 
