--- a/src/styles/Profile.module.css
+++ b/src/styles/Profile.module.css
@@ -20,7 +20,7 @@
 
 .leftContainer {
     flex: 1;
-    margin-top: 100px; /* 위쪽 마진 추가 */
+    margin-top: 80px; /* 위쪽 마진 추가 */
     display: flex;
     flex-direction: column; /* 세로 방향으로 배치 */
     gap: 20px; /* 상하 간격 설정 */
@@ -183,7 +183,8 @@
 }
 
 .withdrawContainer {
-    margin-top: 5px; /* 상자와의 간격 조정 */
+    margin-bottom: 5px; /* 상자와의 간격 조정 */
+    margin-right: 15%;
 }
 
 .withdrawText {
@@ -191,7 +192,7 @@
     text-decoration: underline;
     cursor: pointer;
     display: block;
-    text-align: center;
+    text-align: right;
 }
 
 .withdrawText:hover {
