[#147]✨feat : 백오피스 유저리스트 검색기능 연동 및 화면 구성

--- a/src/styles/UserList.module.css
+++ b/src/styles/UserList.module.css
@@ -111,3 +111,28 @@
     text-underline-offset: 5px; /* 밑줄 간격 조정 */
     text-decoration-color: #864e5d;
 }
+
+.searchContainer {
+    float: right;
+}
+
+.searchContainer label {
+    padding: 10px;
+}
+
+.searchInput {
+    margin-right: 10px;
+    padding: 10px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+}
+
+.searchButton {
+    padding: 10px;
+    background-color: #864e5d;
+    color: white;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
