--- a/src/styles/ReportList.module.css
+++ b/src/styles/ReportList.module.css
@@ -15,7 +15,8 @@
     border-collapse: collapse;
 }
 
-.table th, .table td {
+.table th,
+.table td {
     padding: 12px 15px;
     text-align: left;
 }
@@ -42,31 +43,35 @@
 
 .table th:nth-child(1),
 .table td:nth-child(1) {
-    width: 40%; /* 원하는 너비로 조정 */
+    width: 40%;
+    /* 원하는 너비로 조정 */
 }
 
 /* 신고사유 */
 .table th:nth-child(2),
 .table td:nth-child(2) {
-    width: 15%; /* 원하는 너비로 조정 */
+    width: 15%;
+    /* 원하는 너비로 조정 */
 }
 
 /* 신고당한 유저*/
 .table th:nth-child(3),
 .table td:nth-child(3) {
-    width: 15%; /* 원하는 너비로 조정 */
+    width: 15%;
+    /* 원하는 너비로 조정 */
 }
 
 /* 신고상태 */
 .table th:nth-child(4),
-.table td:nth-child(4){
+.table td:nth-child(4) {
     width: 15%;
 }
 
 /* 신고일자*/
 .table th:nth-child(5),
 .table td:nth-child(5) {
-    width: 20%; /* 원하는 너비로 조정 */
+    width: 20%;
+    /* 원하는 너비로 조정 */
 }
 
 
@@ -74,6 +79,50 @@
 .reportEdit {
     cursor: pointer;
     text-decoration-line: underline;
-    text-underline-offset: 5px; /* 밑줄 간격 조정 */
+    text-underline-offset: 5px;
+    /* 밑줄 간격 조정 */
     text-decoration-color: #864e5d;
+}
+
+.searchContainer {
+    float: right;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+.search {
+    float: left;
+    display: flex;
+    align-items: center;
+}
+
+.searchContainer label {
+    padding: 10px;
+}
+
+.searchInput {
+    margin-right: 10px;
+    padding: 10px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+}
+
+.searchDate {
+    margin-right: 10px;
+    width: 200px;
+    padding: 10px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+}
+
+.searchButton {
+    padding: 10px;
+    background-color: #864e5d;
+    color: white;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
 }
