[#200]♻️refactor: 로그인화면 소셜 로그인 버튼 수정

--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -57,3 +57,12 @@
 .kakaoLoginButton:hover {
     transform: scale(1.05);
 }
+
+.socialLoginContainer {
+    display: flex;
+    justify-content: center;
+}
+
+.blank {
+    margin-left: 84px;
+}
