--- a/src/styles/PetCardPost.css
+++ b/src/styles/PetCardPost.css
@@ -7,16 +7,19 @@
     font-family: Arial, sans-serif;
     margin: 20px auto;
   }
-  
   .card-header {
+    background-color: #f5f5f5;
+    padding-bottom: 10px;
+    margin-right: auto;
+  }
+
+  .card-header-line {
     display: flex;
     justify-content: space-between;
     padding: 10px;
-    background-color: #f5f5f5;
     font-size: 18px;
     font-weight: bold;
     align-items: center;
-    margin-bottom: 10px;
   }
   
   .card-title {
@@ -60,3 +63,8 @@
     cursor: pointer;
 }
   
+.card-detail {
+  margin:  0 100px 0 15px;
+  display: flex;
+  font-size: 0.8em;
+}
